enh(repository) Use addSorting() on default query construction enh(java) Prepare for Java 21+